Optim: 优化GatewaySocketServer启动逻辑。